[project]
name = "api-rerank-ebm"
version = "0.1.0"
description = "API for rerank RAGFlow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.2",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "uvicorn>=0.40.0",
]
